@@ -3,6 +3,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 0.23
 	Fix tests on machines that have configuration files installed elsewhere
 	Look in more places for the config files, when config_dirs is not given
+	'file' means 'config_file'
 
 0.22	Fri May  9 14:31:28 EDT 2025
 	Fix CI tests
